change daily -> random

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/daily_problem"
+                    android:text="@string/random_problem"
                     android:textColor="#000000"
                     android:textSize="34sp"
                     android:textStyle="bold" />
